# RMS_exe_installer

./: .gitignore  README.md  build.bat  build.sh  build_exe.spec  pyproject.toml  requirements.txt  run_app.py
.github/workflows/: build-release.yml
snr_meter/: __init__.py  audio_engine.py  main_window.py  widgets.py
